--- a/BuildingBlocks/index.html
+++ b/BuildingBlocks/index.html
@@ -6,16 +6,16 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="selection" ondrop="drop(event)" ondragover="allowDrop(event)">
-		<div id="square" draggable="true" ondragstart="drag(event)"></div>
-		<div id="circle"></div>
-		<div id="left-triangle"></div>
-		<div id="right-triangle"></div>
-		<div id="rectangle"></div>
-		<div id="left-parallel"></div>
-		<div id="right-parallel"></div>
+	<div class="selection">
+		<div class="drag" id="square"></div>
+		<div class="drag" id="circle"></div>
+		<div class="drag" id="left-triangle"></div>
+		<div class="drag" id="right-triangle"></div>
+		<div class="drag" id="rectangle"></div>
+		<div class="drag" id="left-parallel"></div>
+		<div class="drag" id="right-parallel"></div>
 	</div>
-	<div class="grid" ondrop="drop(event)" ondragover="allowDrop(event)">
+	<div class="grid">
 		<div class="row" id="instruction">
 			<p> Building Blocks<br/>
 				Drag a shap over here to start building!
