modified little dude

--- a/Little Dude/index.html
+++ b/Little Dude/index.html
@@ -5,9 +5,9 @@
 	<title>Little Dude</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/script.js"></script>
-	<script type="text/javascript" src="js/jQuery-1.11.1.js"></script> 
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -16,10 +16,10 @@
 			<div id="health" class="col-md-2 text-right">
 				Health: 10
 			</div>
-			<div class="col-md-2 text-center">
+			<div id="love" class="col-md-2 text-center">
 				Love: 10
 			</div>
-			<div class="col-md-2 text-left">
+			<div id="happiness" class="col-md-2 text-left">
 				Happiness: 10
 			</div>
 			<div class="col-md-3"></div>
@@ -45,10 +45,10 @@
 				<button type="button" id="btn_feed" class="btn btn-primary btn-block">Feed the Dude</button>
 			</div>
 			<div class="col-md-2">
-				<button type="button" class="btn btn-primary btn-block">Hug the Dude</button>
+				<button type="button" id="btn_hug" class="btn btn-primary btn-block">Hug the Dude</button>
 			</div>
 			<div class="col-md-2">
-				<button type="button" class="btn btn-primary btn-block">Play with the Dude</button>
+				<button type="button" id="btn_play" class="btn btn-primary btn-block">Play with the Dude</button>
 			</div>
 			<div class="col-md-3"></div>
 		</div>
