day 8 complete little dude

--- a/Little Dude/index.html
+++ b/Little Dude/index.html
@@ -33,10 +33,18 @@
 				<div class="mouth smile"></div>
 			</div>
 			<div class="head">
-				<div id="arm_left" class="arm"></div>
-				<div id="arm-right" class="arm"></div>
-				<div id="leg-left" class="leg"></div>
-				<div id="leg-right" class="leg"></div>
+				<div id="arm_left" class="arm">
+					<div id="hand_left" class="hand"></div>
+				</div>
+				<div id="arm-right" class="arm">
+					<div id="hand_right" class="hand"></div>
+				</div>
+				<div id="leg-left" class="leg">
+					<div id="foot_left" class="foot"></div>
+				</div>
+				<div id="leg-right" class="leg">
+					<div id="foot_right" class="foot"></div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
