--- a/Particle Wave/index.html
+++ b/Particle Wave/index.html
@@ -5,7 +5,8 @@
 	<title>Particle Wave</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/jquery.js"></script> 
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/underscore-min.js"></script> 
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
