Type Attack, capture the characters pressed and update stat

--- a/Type Attack/index.html
+++ b/Type Attack/index.html
@@ -18,11 +18,11 @@
 		<h2 id="third">Good Luck!</h2>
 	</div>
 	<div class="container">
-		<canvas id='canvas' height='500em' width='500em'></canvas>
+		<canvas id='canvas' height='500' width='500'></canvas>
 		<div class="row" id="stat_container">
-			<div class="stat" id="correct">Correct: 0</div>
-			<div class="stat" id="wrong">Wrong: 0</div>
-			<div class="stat" id="missed">Missed: 0</div>
+			<div class="stat" id="Correct">Correct: 0</div>
+			<div class="stat" id="Wrong">Wrong: 0</div>
+			<div class="stat" id="Missed">Missed: 0</div>
 		</div>
 	</div>
 </body>
